Adds listUser API
