# backend/src/main/java/com/efforttracker/app/controller/UserController.java
@@ -6,8 +6,12 @@ import org.springframework.web.bind.annotation.RestController;
 
 //import com.efforttracker.app.models.User;
 import com.efforttracker.specs.User;
+import com.efforttracker.specs.ListUsersRequest;
+import com.efforttracker.specs.ListUsersResponse;
 import com.efforttracker.app.tracker.EffortTracker;
 import com.efforttracker.specs.UserApi;
+
+import jakarta.validation.OverridesAttribute.List;
 
 import java.util.Optional;
 
@@ -19,8 +23,18 @@ public class UserController implements UserApi {
 
     @Override
 	public ResponseEntity<User> createUser(User user) {
+        if(user.getId() != null) {
+            throw new IllegalArgumentException("User ID must be null");
+        }
 		final User createdUser = effortTracker.addUser(user);
 		return ResponseEntity.of(Optional.of(createdUser));
+	}
+
+    @Override
+	public ResponseEntity<ListUsersResponse> listUsers(ListUsersRequest listUsersRequest) {
+		final ListUsersResponse response = new ListUsersResponse();
+		response.setUserList(effortTracker.listUsers());
+		return ResponseEntity.of(Optional.of(response));
 	}
     
 }
