# openapi/specs.yml
@@ -112,16 +112,40 @@ paths:
         '409':
           description: User already exists
         '500':
-          description: Internal Error       
+          description: Internal Error 
+  /user/list:
+    post:
+      tags:
+        - user
+      summary: Lists user in the system
+      description: Lists user in the system
+      operationId: listUsers
+      requestBody:
+        description: Lists user in the system
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ListUsersRequest'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListUsersResponse'
+        '400':
+          description: Invalid input
+        '500':
+          description: Internal Error      
 components:
   schemas:
     User:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          example: 10
+          type: String
+          example: hhdbsjns-hddjskks-shdhdjsk
         name:
           type: string
           example: John
@@ -167,6 +191,23 @@ components:
           $ref: '#/components/schemas/StringFilter'
         stateFilter:
           $ref: '#/components/schemas/StringFilter'
+    FilterUser:
+      type: object
+      properties:
+        userFilter:
+          $ref: '#/components/schemas/StringFilter'
+    ListUsersRequest:
+      type: object
+      properties:
+        filter:
+          $ref: '#/components/schemas/FilterUser'
+    ListUsersResponse:
+      type: object
+      properties:
+        userList:
+          type: array
+          items:
+            $ref: '#/components/schemas/User'
     ListTasksRequest:
       type: object
       properties:
